--- a/index.html
+++ b/index.html
@@ -1,27 +1,32 @@
 ﻿<!DOCTYPE html>
+
 <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="FoglioStile.css" />
     <title>Header</title>
 </head>
+
 <body>
     <header>
         <div class="header">
             <a href="#"><img src="" alt="logoregistro"></a>
+        </div>
+        <div class="header-buttons">
             <nav>
-            <ul>
-                <li>
-                    <a href="#">Progetto</a>
-                </li>
-                <li>
-                    <a href="#">Contatti</a>
-                </li>
-                <li>
-                    <a href="#">Accedi</a>
-                </li>
-            </ul>
-        </nav>
+                <ul>
+                    <li>
+                        <a href="#">Progetto</a>
+                    </li>
+                    <li>
+                        <a href="#">Contatti</a>
+                    </li>
+                    <li>
+                        <a href="#">Accedi</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
     </header>
 </body>
