--- a/index.html
+++ b/index.html
@@ -5,26 +5,24 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="FoglioStile.css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Londrina+Solid:wght@900&display=swap" rel="stylesheet">
     <title>Header</title>
 </head>
 
 <body>
     <header>
         <div class="header">
-            <a href="#"><img src="" alt="logoregistro"></a>
+            <a href="#"><img class="image" src="header_logo.png" alt="logoregistro" /></a>
         </div>
         <div class="header-buttons">
             <nav>
                 <ul>
-                    <li>
+                    <li class="header-button">
                         <a href="#">Progetto</a>
                     </li>
-                    <li>
+                    <li class="header-button">
                         <a href="#">Contatti</a>
                     </li>
-                    <li>
+                    <li class="header-button">
                         <a href="#">Accedi</a>
                     </li>
                 </ul>
